--- a/settings.yaml
+++ b/settings.yaml
@@ -1,9 +1,9 @@
 mysql:
   host: 127.0.0.1
   port: 3306
-  db: gvb_ db
+  db: gvb_db
   user: root
-  password: root
+  password: 123456
   log_level: dev
 logger:
   level: info
